--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+:root{
+    --zapp-primary-top:rgba(234, 234, 234, 1);
+    --zapp-primary-bottom:rgba(243, 238, 234, 1);
+    --zapp-notifications:rgba(142, 218, 252, 1);
+    --zapp-icons-light:rgba(177, 177, 177, 1);
+    --zapp-icons-dark:rgba(107, 115, 118, 1);
+    --zapp-bg-message:rgba(213, 249, 186, 1);
+    --zapp-light:rgba(255, 255, 255, 1);
+    --zapp-bg-big:rgba(218, 219, 212, 1);
+    --zapp-bg-small:rgba(0, 150, 136, 1);
+}
