--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* #region common */
 *{
     margin: 0;
     padding: 0;
@@ -13,4 +14,28 @@
     --zapp-light:rgba(255, 255, 255, 1);
     --zapp-bg-big:rgba(218, 219, 212, 1);
     --zapp-bg-small:rgba(0, 150, 136, 1);
+}
+body{
+    height: 100vh;
+    background-color: var(--zapp-bg-big);
+}
+/* #endregion common */
+
+/* #region utilities */
+.container{
+    width: 90%;
+    margin: auto;
+    margin-top: 1rem;
+    height: 90%;
+    background-color: aqua;
+}
+
+/* #endregion utilities */
+
+@media screen and (max-width:991px) {
+    
+}
+
+@media screen and (max-width:540px) {
+    
 }
