--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,9 +59,29 @@ body{
 }
 /* #region side_nav */
 .side_nav{
-    background-color: aliceblue;
-    height: 50px;
+    background-color: var(--zapp-primary-top);
+    height: 70px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+
 }
+.right_nav{
+    width: 50px;
+    height: 50px;
+
+    & img{
+        border-radius: 50%;
+        width: 100%;
+        height: 100%;
+    }
+}
+.left_nav{
+    color: var(--zapp-icons-light);
+    gap: 1rem;
+    font-size: 1.5rem;
+}
+
 /* #endregion side_nav */
 
 /* #region notification */
