--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,9 @@ body{
 .col-4{
     width: calc((100% / 12) * 4);
 }
+.col-7{
+    width: calc((100% / 12) * 7);
+}
 .col-8{
     width: calc((100% / 12) * 8);
 }
@@ -200,7 +203,7 @@ padding-left: 1rem;
 .main_contact{
     flex-direction: column;
     padding-left: 1rem;
-    
+
     span:first-of-type{
         font-size: 1.2rem;
     }
@@ -212,15 +215,45 @@ padding-left: 1rem;
 
 /* #region chat */
 .chat{
-    background-color: lightcoral;
-    height: calc(100% - 100px);
+    background-image: url(../img/mine.jpg);
+    height: calc(100% - 140px);
+    overflow-y: auto;
+    flex-direction: column;
+    padding: 2rem 4rem;
+    gap: 1.5rem;
+
+    & .sent{
+        background-color: var(--zapp-bg-message);
+        border-radius: 1rem;
+        align-self: flex-end;
+        padding: 1rem;
+        position: relative;
+
+    }
+    & .received{
+        background-color: var(--zapp-light);
+        border-radius: 1rem;
+        align-self: flex-start;
+        padding: 1rem;
+        position: relative;
+    }
+}
+.info_icon{
+    color: var(--zapp-icons-light);
+}
+.msg_time{
+    color: var(--zapp-icons-light);
+    position: absolute;
+    font-size: 0.8rem;
+    right: 0.5rem;
+    bottom: 0.5rem;
 }
 /* #endregion chat */
 
 /* #region main_bottom */
 .main_bottom{
-    background-color: lightgreen;
-    height: 50px;
+    background-color: var(--zapp-primary-bottom);
+    height: 70px;
 }
 /* #endregion main_bottom */
 
