--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,67 +1,81 @@
 /* #region common */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-:root{
-    --zapp-primary-top:rgba(234, 234, 234, 1);
-    --zapp-primary-bottom:rgba(243, 238, 234, 1);
-    --zapp-notifications:rgba(142, 218, 252, 1);
-    --zapp-icons-light:rgba(177, 177, 177, 1);
-    --zapp-icons-dark:rgba(107, 115, 118, 1);
-    --zapp-bg-message:rgba(213, 249, 186, 1);
-    --zapp-light:rgba(255, 255, 255, 1);
-    --zapp-bg-big:rgba(218, 219, 212, 1);
-    --zapp-bg-small:rgba(0, 150, 136, 1);
+
+:root {
+    --zapp-primary-top: rgba(234, 234, 234, 1);
+    --zapp-primary-bottom: rgba(243, 238, 234, 1);
+    --zapp-notifications: rgba(142, 218, 252, 1);
+    --zapp-icons-light: rgba(177, 177, 177, 1);
+    --zapp-icons-dark: rgba(107, 115, 118, 1);
+    --zapp-bg-message: rgba(213, 249, 186, 1);
+    --zapp-light: rgba(255, 255, 255, 1);
+    --zapp-bg-big: rgba(218, 219, 212, 1);
+    --zapp-bg-small: rgba(0, 150, 136, 1);
 }
-body{
+
+body {
     height: 100vh;
     background-color: var(--zapp-bg-big);
     overflow: hidden;
+    font-family: 'Lato', sans-serif;
+    background-image: linear-gradient(var(--zapp-bg-small) 100px, 100px, var(--zapp-bg-big));
 }
+
 /* #endregion common */
 
 /* #region utilities */
-.container{
+.container {
     width: 90%;
     margin: auto;
     margin-top: 1rem;
     height: 95vh;
     background-color: aqua;
 }
-.app_page{
+
+.app_page {
     width: 100%;
     height: 100%;
 }
-.d-flex{
+
+.d-flex {
     display: flex;
 }
-.row{
+
+.row {
     display: flex;
     width: 100%;
 }
-.col-4{
+
+.col-4 {
     width: calc((100% / 12) * 4);
 }
-.col-7{
+
+.col-7 {
     width: calc((100% / 12) * 7);
 }
-.col-8{
+
+.col-8 {
     width: calc((100% / 12) * 8);
 }
-.col-12{
+
+.col-12 {
     width: 100%;
 }
+
 /* #endregion utilities */
 
 /* #region sidebar */
-.sidebar{
+.sidebar {
     background-color: bisque;
     height: 100%;
 }
+
 /* #region side_nav */
-.side_nav{
+.side_nav {
     background-color: var(--zapp-primary-top);
     height: 70px;
     justify-content: space-between;
@@ -69,16 +83,18 @@ body{
     padding: 0 1rem;
 
 }
-.left_nav{
+
+.left_nav {
     height: 50px;
 
-    & img{
+    & img {
         border-radius: 50%;
         width: 100%;
         height: 100%;
     }
 }
-.right_nav{
+
+.right_nav {
     color: var(--zapp-icons-light);
     gap: 1rem;
     font-size: 1.5rem;
@@ -87,110 +103,121 @@ body{
 /* #endregion side_nav */
 
 /* #region notification */
-.notification{
-background-color: var(--zapp-notifications);
-height: 75px;
-align-items: center;
-padding-left: 1rem;
+.notification {
+    background-color: var(--zapp-notifications);
+    height: 75px;
+    align-items: center;
+    padding-left: 1rem;
 
-    & .icon{
+    & .icon {
         background-color: var(--zapp-light);
         border-radius: 50%;
         aspect-ratio: 1;
 
-        & i{
+        & i {
             color: var(--zapp-notifications);
             font-size: 1.2rem;
             padding: 0.8rem;
         }
     }
 }
-.text{
+
+.text {
     flex-direction: column;
     padding-left: 1rem;
 
-    & a{
+    & a {
         color: var(--zapp-icons-light);
     }
 }
+
 /* #endregion notification */
 
 /* #region searchbar */
-.searchbar{
+.searchbar {
     background-color: var(--zapp-primary-top);
     padding: 0.5rem;
 }
-.search{
+
+.search {
     background-color: var(--zapp-light);
     align-items: center;
     gap: 1rem;
     padding: 0.5rem;
     border-radius: 0.5rem;
 
-    & i{
+    & i {
         color: var(--zapp-icons-light);
     }
 
-    & input{
+    & input {
         border: none;
         width: 100%;
-        
+
     }
 }
+
 /* #endregion searchbar */
 
 /* #region contacts */
-.contact_list{
+.contact_list {
     height: calc(100% - 193px);
     overflow-y: scroll;
 }
-.contact{
+
+.contact {
     background-color: var(--zapp-light);
     padding: 0 1rem;
     height: 70px;
     align-items: center;
     border-bottom: 0.5px solid var(--zapp-icons-light);
 }
-.user_img{
+
+.user_img {
     width: 50px;
     height: 50px;
 
-    & img{
+    & img {
         border-radius: 50%;
         width: 100%;
         height: 100%;
     }
 }
-.text{
+
+.text {
     width: 100%;
 
-    & .user_name{
+    & .user_name {
         justify-content: space-between;
     }
-    & p{
+
+    & p {
         color: var(--zapp-icons-light);
     }
 }
-.user_name{
-    span:first-of-type{
+
+.user_name {
+    span:first-of-type {
         font-size: 1.2rem;
     }
-    span:last-of-type{
+
+    span:last-of-type {
         color: var(--zapp-icons-light);
     }
 }
+
 /* #endregion contacts */
 
 /* #endregion sidebar */
 
 /* #region main_app */
-.main_app{
+.main_app {
     background-color: brown;
     height: 100%;
 }
 
 /* #region main_nav */
-.main_nav{
+.main_nav {
     background-color: var(--zapp-primary-top);
     height: 70px;
     border-left: 0.5px solid var(--zapp-icons-light);
@@ -198,25 +225,28 @@ padding-left: 1rem;
     align-items: center;
     justify-content: space-between;
 
-    & .left_nav{
+    & .left_nav {
         align-items: center;
     }
 }
-.main_contact{
+
+.main_contact {
     flex-direction: column;
     padding-left: 1rem;
 
-    span:first-of-type{
+    span:first-of-type {
         font-size: 1.2rem;
     }
-    span:last-of-type{
+
+    span:last-of-type {
         color: var(--zapp-icons-light);
     }
 }
+
 /* #endregion main_nav */
 
 /* #region chat */
-.chat{
+.chat {
     background-image: url(../img/mine.jpg);
     height: calc(100% - 140px);
     overflow-y: auto;
@@ -224,7 +254,7 @@ padding-left: 1rem;
     padding: 2rem 4rem;
     gap: 1.5rem;
 
-    & .sent{
+    & .sent {
         background-color: var(--zapp-bg-message);
         border-radius: 1rem;
         align-self: flex-end;
@@ -232,7 +262,8 @@ padding-left: 1rem;
         position: relative;
 
     }
-    & .received{
+
+    & .received {
         background-color: var(--zapp-light);
         border-radius: 1rem;
         align-self: flex-start;
@@ -240,55 +271,58 @@ padding-left: 1rem;
         position: relative;
     }
 }
-.info_icon{
+
+.info_icon {
     color: var(--zapp-icons-light);
 }
-.msg_time{
+
+.msg_time {
     color: var(--zapp-icons-light);
     position: absolute;
     font-size: 0.8rem;
     right: 0.5rem;
     bottom: 0.5rem;
 }
+
 /* #endregion chat */
 
 /* #region main_bottom */
-.main_bottom{
+.main_bottom {
     background-color: var(--zapp-primary-bottom);
     height: 70px;
     padding: 0 1.5rem;
     align-items: center;
 }
-.emojis{
+
+.emojis {
     padding-right: 1.5rem;
     color: var(--zapp-icons-dark);
     font-size: 1.5rem;
 }
-.input_msg{
-    
+
+.input_msg {
+
     flex-grow: 1;
 
-    & input{
+    & input {
         width: 100%;
         border: none;
         padding: 1rem;
         border-radius: 0.5rem;
     }
 }
-.audio{
+
+.audio {
     padding-left: 1.5rem;
     color: var(--zapp-icons-dark);
     font-size: 1.5rem;
 }
+
 /* #endregion main_bottom */
 
 
 /* #endregion main_app */
 
-@media screen and (max-width:991px) {
-    
-}
+@media screen and (max-width:991px) {}
 
-@media screen and (max-width:540px) {
-    
-}
+@media screen and (max-width:540px) {}
