--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -326,8 +326,13 @@ body {
     .hide{
         display: none;
     }
+    .container{
+        width: 100%;
+        height: 100vh;
+        margin: 0;
+    }
     .sidebar{
-        width: 10%;
+        width: 90px;
     }
     .main_app{
         width: 100%;
@@ -343,4 +348,8 @@ body {
     }
 }
 
-@media screen and (max-width:540px) {}
+@media screen and (max-width:540px) {
+    .sidebar{
+        display: none;
+    }
+}
