--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,12 @@ body {
 .col-12 {
     width: 100%;
 }
+ul{
+    list-style: none;
+}
+li{
+    padding: 0.6rem 0;
+}
 
 /* #endregion utilities */
 
@@ -273,6 +279,25 @@ body {
 
 .info_icon {
     color: var(--zapp-icons-light);
+    position: relative;
+
+    &:hover .drop_info{
+        display: block;
+    }
+    
+    & .drop_info{
+        position: absolute;
+        width: 12rem;
+        top: 15%;
+        right: 0;
+        background-color: var(--zapp-light);
+        padding: 0.5rem;
+        text-align: center;
+        color: var(--zapp-icons-dark);
+        font-size: 1rem;
+        box-shadow: 0 0 15px 0 var(--zapp-icons-light);
+        display: none;
+    }
 }
 
 .msg_time {
